debug.log
ERROR 2026-03-04 14:33:23,267 django.request Internal Server Error: /user/update/ 
Traceback (most recent call last):
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/core/handlers/base.py", line 198, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/contrib/auth/decorators.py", line 59, in _view_wrapper
    return view_func(request, *args, **kwargs)
  File "/Users/yoo/PycharmProjects/DjangoProject1/users/views.py", line 70, in user_update
    return render(request, 'users/profile_update.html',
                  {'user_form': user_form, 'pw_form': pw_form})
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/loader.py", line 62, in render_to_string
    return template.render(context, request)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/backends/django.py", line 107, in render
    return self.template.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 174, in render
    return self._render(context)
           ~~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 166, in _render
    return self.nodelist.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 1091, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 1052, in render_annotated
    return self.render(context)
           ~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/loader_tags.py", line 160, in render
    return compiled_parent._render(context)
           ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 166, in _render
    return self.nodelist.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 1091, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 1052, in render_annotated
    return self.render(context)
           ~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/loader_tags.py", line 66, in render
    result = block.nodelist.render(context)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 1091, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 1052, in render_annotated
    return self.render(context)
           ~~~~~~~~~~~^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/defaulttags.py", line 511, in render
    url = reverse(view_name, args=args, kwargs=kwargs, current_app=current_app)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/urls/base.py", line 98, in reverse
    resolved_url = resolver._reverse_with_prefix(view, prefix, *args, **kwargs)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/urls/resolvers.py", line 842, in _reverse_with_prefix
    raise NoReverseMatch(msg)
django.urls.exceptions.NoReverseMatch: Reverse for 'profile' not found. 'profile' is not a valid view function or pattern name.
ERROR 2026-03-04 14:33:23,278 django.server "GET /user/update/ HTTP/1.1" 500 153740 
ERROR 2026-03-04 14:33:47,252 django.request Internal Server Error: /user/update/ 
Traceback (most recent call last):
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/core/handlers/base.py", line 198, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/contrib/auth/decorators.py", line 59, in _view_wrapper
    return view_func(request, *args, **kwargs)
  File "/Users/yoo/PycharmProjects/DjangoProject1/users/views.py", line 70, in user_update
    return render(request, 'users/profile_update.html',
                  {'user_form': user_form, 'pw_form': pw_form})
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/backends/django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/engine.py", line 186, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/loaders/base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 157, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 199, in compile_nodelist
    nodelist = parser.parse()
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 585, in parse
    raise self.error(token, e)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/loader_tags.py", line 307, in do_extends
    nodelist = parser.parse()
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 585, in parse
    raise self.error(token, e)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/loader_tags.py", line 307, in do_extends
    nodelist = parser.parse()
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 585, in parse
    raise self.error(token, e)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "/Users/yoo/PycharmProjects/DjangoProject1/.venv/lib/python3.14/site-packages/django/template/loader_tags.py", line 229, in do_block
    raise TemplateSyntaxError(
        "'%s' tag with name '%s' appears more than once" % (bits[0], block_name)
    )
django.template.exceptions.TemplateSyntaxError: Template: /Users/yoo/PycharmProjects/DjangoProject1/templates/users/profile_update.html, 'block' tag with name 'content' appears more than once
ERROR 2026-03-04 14:33:47,257 django.server "GET /user/update/ HTTP/1.1" 500 194697 
